--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -4,6 +4,6 @@
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Este programa ha sido desarrolado como ejemplo en el curso de Android para demostrar como se pueden lanzar actividades desde la actividad principal.">
+    android:text="Este juego due diseñado para la clase de Dispositivos Moviles que imparte el maestro MSI Fausto Abraham Jacques Garcia">
 </TextView>
 
