--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.gesture.GestureOverlayView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/gestures"
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
-    android:gestureStrokeType="multiple" android:fadeOffset="800">
-    <LinearLayout android:orientation="vertical"
-        android:layout_gravity="center" android:layout_width="fill_parent"
-        android:padding="30dip" android:gravity="center" android:background="@drawable/degradado"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gestures"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gestureStrokeType="multiple"
+    android:fadeOffset="800">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_width="fill_parent"
+        android:padding="30dip"
+        android:gravity="center"
+        android:background="@drawable/fondo4"
         android:layout_height="fill_parent">
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="wrap_content" android:layout_gravity="center"
-            android:textSize="25sp" android:paddingBottom="20dip"
-            android:text="@string/tituloAplicacion" android:textColor="@color/colordetitulo" />
-        <Button android:id="@+id/button1" android:layout_height="wrap_content"
-            android:layout_gravity="center" android:layout_width="fill_parent"
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="25sp"
+            android:layout_marginRight="90dp"
+            android:layout_marginTop="150dp"
+            android:paddingBottom="20dip"
+            android:text="@string/tituloAplicacion"
+            android:textColor="@color/colordetitulo" />
+        <Button
+            android:id="@+id/button1"
+            android:layout_marginTop="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:background="@null"
+            android:layout_marginRight="90dp"
+            android:layout_width="fill_parent"
             android:text="@string/Arrancar"></Button>
-        <Button android:id="@+id/button2" android:layout_height="wrap_content"
-            android:text="@string/Configurar" android:layout_gravity="center"
+        <Button android:id="@+id/button2"
+            android:layout_height="wrap_content"
+            android:text="@string/Configurar"
+            android:textColor="#ffffff"
+            android:layout_marginRight="90dp"
+            android:background="@null"
+            android:layout_gravity="center"
             android:layout_width="fill_parent"></Button>
-        <Button android:id="@+id/button3" android:layout_height="wrap_content"
-            android:text="@string/Acercade" android:layout_gravity="center"
+        <Button android:id="@+id/button3"
+            android:layout_height="wrap_content"
+            android:text="@string/Acercade"
+            android:layout_marginRight="90dp"
+            android:textColor="#ffffff"
+            android:background="@null"
+            android:layout_gravity="center"
             android:layout_width="fill_parent"></Button>
-        <Button android:text="@string/Salir" android:id="@+id/button4"
-            android:layout_height="wrap_content" android:layout_gravity="center"
+        <Button android:text="@string/Salir"
+            android:id="@+id/button4"
+            android:layout_marginRight="90dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:background="@null"
             android:layout_width="fill_parent"></Button>
     </LinearLayout>
 </android.gesture.GestureOverlayView>
